# handm

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
conf/: main.yaml
notebook/: eda.ipynb  feature.ipynb  model.ipynb
src/: main.py  main_imf.py  main_lightgcn.py  main_neumf.py  main_ranking.py  main_rule.py
src/models/: base.py  cooccurrence.py  ensemble.py  imf.py  lightgcn.py  mlflow_wrapper.py  neumf.py  popularity.py  purchased_items.py  random_rec.py  repurchase.py
src/rankers/: base.py  listwise.py  pointwise.py
src/schema/: config.py  models.py
src/utils/: dataloader.py  feature_transformer.py  logger.py  metrics_calculator.py
